bk_ida/gccida/c3/default_conversion
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/default_conversion/src/c-typeck.c:1433:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/default_conversion/src/c-typeck.c:1435:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node **v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/default_conversion/src/c-typeck.c:1528:20: error: expected expression
v16 = ( tree_node *)*( &global_trees + 25); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/default_conversion/src/c-typeck.c:1528:9: error: use of undeclared identifier 'tree_node'
v16 = ( tree_node *)*( &global_trees + 25); 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/default_conversion/src/obj/c-typeck.o] Error 1
